--- a/main/index3.html
+++ b/main/index3.html
@@ -160,6 +160,10 @@
 
       link.addEventListener("click", () => {
         document.getElementById("section").classList.add("active");
+
+        setTimeout(()=>{
+          
+        }, 2000)
       });
     </script>
   </body>
