--- a/gamesite/index.html
+++ b/gamesite/index.html
@@ -1,62 +1,132 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/fonts.css">
-    <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="css/fonts.css" />
+    <link rel="stylesheet" href="css/reset.css" />
+    <link rel="stylesheet" href="css/style.css" />
     <title>게임 사이트</title>
-</head>
-<body>
-    <div id="music__wrap">
-        <div class="a1">
-            <div class="a1box">
-                <a href="../main/index.html">
-                  <span>HOME</span>
-                  <img src="img/reverseArrow.svg" alt="화살표" />
-                </a>
-            </div>
+  </head>
+  <body>
+    <div id="game_wrap">
+      <section id="game" class="load pagemove">
+        <div class="p10">
+          <!-- 1 -->
+          <a href="../main/index3.html" class="movelink link">
+            <h2>home</h2>
+            <img src="img/reverseArrow.svg" alt="화살표" />
+          </a>
         </div>
-        <div class="a2">
-            <ol>
-                <li><a href="../musicplayer/index.html">1</a></li>
-                <li><a href="../effect/index.html">2</a></li>
-                <li class="active"><a href="#3">3</a></li>
-            </ol>
-            <h1>GAME SITE</h1>
+        <div class="p10 h1 lh_75">
+          <!-- 2 -->
+          <div class="pagenum">
+            <a href="../musicplayer/index.html" class="link">1</a>
+            <a href="../effect/index.html" class="link">2</a>
+            <a href="#3" class="now">3</a>
+          </div>
+          <h1>game site</h1>
         </div>
-        <div class="b1">
-            <p>자바스크립트 프레임 웍 리액트 뷰, 껌이지 그냥 잘함 구경해보삼 자바스크립트 프레임 웍 리액트 뷰, 껌이지 그냥 잘함 구경해보삼 자바스크립트 프레임 웍 리액트 뷰, 껌이지 그냥 잘함 구경해보삼 자바스크립트 프레임 웍 리액트 뷰, 껌이지 그냥 잘함 구경해보삼 자바스크립트 프레임 웍 리액트 뷰, 껌이지 그냥 잘함 구경해보삼 자바스크립트 React는 상호작용이 많은 UI를 만들 때 생기는 어려움을 줄여줍니다. 애플리케이션의 각 상태에 대한 간단한 뷰만 설계하세요. 그럼 React는 데이터가 변경됨에 따라 적절한 컴포넌트만 효율적으로 갱신하고 렌더링합니다.
-            </p>
+        <div>
+          <!-- 3 -->
         </div>
-        <div class="b2"></div>
-        <div class="d1"></div>
-        <div class="d2">
-            <div class="d2box">
-                <a href="#3">
-                  <h2>GAME SITE</h2>
-                  <p>자바스크립트 프레임 웍 리액트 뷰, 껌이지 그냥 잘함 구경해보삼 자바스크립트 프레임 웍 리액트 뷰, 껌이지 그냥 잘함 구경해보삼</p>
-                </a>
-            </div>
+        <div>
+          <!-- 4 -->
         </div>
-        <div class="d3">
-            <div class="d3box">
-                <a href="#3">
-                  <h2>SITE VIEW</h2>
-                  <p>네티파이에 올린 파일을 직접 볼 수 있습니다.</p>
-                </a>
-            </div>
+        <div class="black p20">
+          <!-- 5 -->
+          <p class="font_cho lh_160 fz20">
+            자바스크립트 프레임 웍 리액트 뷰, 껌이지 그냥 잘함 구경해보삼
+            자바스크립트 프레임 웍 리액트 뷰, 껌이지 그냥 잘함 구경해보삼
+            자바스크립트 프레임 웍 리액트 뷰, 껌이지 그냥 잘함 구경해보삼
+            자바스크립트 프레임 웍 리액트 뷰, 껌이지 그냥 잘함 구경해보삼
+            자바스크립트 프레임 웍 리액트 뷰, 껌이지 그냥 잘함 구경해보삼
+            자바스크립트 React는 상호작용이 많은 UI를 만들 때 생기는 어려움을
+            줄여줍니다. 애플리케이션의 각 상태에 대한 간단한 뷰만 설계하세요.
+            그럼 React는 데이터가 변경됨에 따라 적절한 컴포넌트만 효율적으로
+            갱신하고 렌더링합니다.
+          </p>
         </div>
-        <div class="d4">
-            <div class="d4box">
-                <a href="#3">
-                  <h2>CODE VIEW</h2>
-                  <p>무슨 무슨 기술을 사용하여 만든 소스를 깃을 통해 볼 수 있습니다. </p>
-                </a>
-            </div>
+        <div>
+          <!-- 6 -->
         </div>
+        <div>
+          <!-- 7 -->
+        </div>
+        <div>
+          <!-- 8 -->
+        </div>
+        <div>
+          <!-- 9 -->
+        </div>
+        <div>
+          <!-- 10 -->
+        </div>
+        <div>
+          <!-- 11 -->
+        </div>
+        <div>
+          <!-- 12 -->
+        </div>
+        <div>
+          <!-- 13 -->
+        </div>
+        <div class="p10">
+          <!-- 14 -->
+          <h2>game site</h2>
+          <p class="p">
+            자바스크립트 프레임 웍 리액트 뷰, 껌이지 그냥 잘함 구경해보삼
+            자바스크립트 프레임 웍 리액트 뷰, 껌이지 그냥 잘함 구경해보삼
+          </p>
+        </div>
+
+        <div class="p10">
+          <!-- 15 -->
+          <h2>CODE VIEW</h2>
+          <p class="p">
+            무슨 무슨 기술을 사용하여 만든 소스를 깃을 통해 볼 수 있습니다.
+          </p>
+        </div>
+
+        <div class="p10">
+          <!-- 16 -->
+          <h2>SITE VIEW</h2>
+          <p class="p">네티파이에 올린 파일을 직접 볼 수 있습니다.</p>
+        </div>
+      </section>
     </div>
-</body>
+    <script>
+      const link = document.querySelector("#game .link");
+      const Box = document.querySelectorAll("#game div");
+
+      window.onload = function () {
+        function pageon() {
+          setTimeout(() => {
+            document.getElementById("game").classList.remove("pagemove");
+            //callback();
+          }, 100);
+        }
+        pageon();
+        function Pagechange() {
+          document.querySelectorAll(".link").forEach((el) => {
+            el.addEventListener("click", (e) => {
+              e.preventDefault();
+              const Href = el.getAttribute("href");
+              document.getElementById("game").classList.add("close");
+              Box.forEach((e, i) => {
+                setTimeout(() => {
+                  e.classList.add("active");
+                }, 50 * i);
+              });
+              setTimeout(() => {
+                window.location.href = Href;
+              }, 3300);
+            });
+          });
+        }
+        Pagechange();
+      };
+    </script>
+  </body>
 </html>
