--- a/main/index3.html
+++ b/main/index3.html
@@ -36,10 +36,9 @@
             공부하였으며, 알고리즘을 통하여 깊이를 더하다.
           </p>
           <div class="num_box">
-            <a href="#3" class="link">1</a>
-            <a href="#3" class="link">2</a>
-            <a href="#3" class="link">3</a>
-            <a href="#3" class="link">4</a>
+            <a href="../musicplayer/index.html" class="link">1</a>
+            <a href="../effect/index.html" class="link">2</a>
+            <a href="../gamesite/index.html" class="link">3</a>
           </div>
         </div>
         <div>
@@ -71,10 +70,9 @@
             마스터하다.
           </p>
           <div class="num_box">
-            <a href="#3" class="link">1</a>
-            <a href="#3" class="link">2</a>
-            <a href="#3" class="link">3</a>
-            <a href="#3" class="link">4</a>
+            <a href="../webstandard/index.html" class="link">1</a>
+            <a href="../phpsite/index.html" class="link">2</a>
+            <a href="../teamproject/index.html" class="link">3</a>
           </div>
         </div>
         <div class="h1 lh_1">
@@ -103,7 +101,9 @@
         </div>
         <div class="face">
           <!-- 11 -->
-          <img src="img/face2.jpg" alt="얼굴" width="100%" height="100%" />
+          <a href="../about/index.html" class="link"
+            ><img src="img/face2.jpg" alt="얼굴" width="100%" height="100%"
+          /></a>
         </div>
         <div class="p10">
           <!-- 12 -->
