--- a/webstandard/index.html
+++ b/webstandard/index.html
@@ -4,60 +4,124 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/fonts.css">
-    <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/fonts.css" />
+    <link rel="stylesheet" href="css/reset.css" />
+    <link rel="stylesheet" href="css/style.css" />
     <title>웹표준사이트</title>
   </head>
   <body>
-    <div id="webstan_wrap">
-      <div class="a1">
-        <ol>
-          <li class="active"><a href="#3">1</a></li>
-          <li><a href="../phpsite/index.html">2</a></li>
-          <li><a href="../teamproject/index.html">3</a></li>
-        </ol>
-        <h1>webstandard</h1>
-      </div>
-      <div class="a4">
-        <div class="a4box">
-          <a href="../main/index.html">
-            <span>HOME</span>
+    <div id="webs_wrap">
+      <div id="webstan" class="load pagemove">
+        <div class="p10 h1 lh_75">
+          <!-- 1 -->
+          <div class="pagenum">
+            <a href="#3" class="now">1</a>
+            <a href="../phpsite/index.html" class="link">2</a>
+            <a href="../teamproject/index.html" class="link">3</a>
+          </div>
+          <h1>webstandard</h1>
+        </div>
+        <div>
+          <!-- 2 -->
+        </div>
+        <div>
+          <!-- 3 -->
+        </div>
+        <div class="p10">
+          <!-- 4 -->
+          <a href="../main/index3.html" class="movelink link">
+            <h2>home</h2>
             <img src="img/Arrow.svg" alt="화살표" />
           </a>
         </div>
-      </div>
-      <div class="b1"></div>
-      <div class="b3">
-        <div class="b3box">
-          <a href="#3">
-            <h2>SITE CODING</h2>
-            <p>자바스크립트 프레임 웍 리액트 뷰, 껌이지 그냥 잘함 구경해보삼 자바스크립트 프레임 웍 리액트 뷰, 껌이지 그냥 잘함 구경해보삼</p>
-          </a>
+        <div>
+          <!-- 5 -->
         </div>
-      </div>
-      <div class="b4"></div>
-      <div class="c3">
-        <div class="c3box">
-          <a href="#3">
-            <h2>CODE VIEW</h2>
-            <p>무슨 무슨 기술을 사용하여 만든 소스를 깃을 통해 볼 수 있습니다.</p>
-          </a>
+        <div>
+          <!-- 6 -->
         </div>
-      </div>
-      <div class="c4">
-        <p>자바스크립트 프레임 웍 리액트 뷰, 껌이지 그냥 잘함 구경해보삼 자바스크립트 프레임 웍 리액트 뷰, 껌이지 그냥 잘함 구경해보삼 자바스크립트 프레임 웍 리액트 뷰, 껌이지 그냥 잘함 구경해보삼 자바스크립트 프레임 웍 리액트 뷰, 껌이지 그냥 잘함 구경해보삼 자바스크립트 프레임 웍 리액트 뷰, 껌이지 그냥 잘함 구경해보삼 자바스크립트 React는 상호작용이 많은 UI를 만들 때 생기는 어려움을 줄여줍니다. 애플리케이션의 각 상태에 대한 간단한 뷰만 설계하세요. 그럼 React는 데이터가 변경됨에 따라 적절한 컴포넌트만 효율적으로 갱신하고 렌더링합니다.
-        </p>
-      </div>
-      <div class="d3">
-        <div class="d3box">
-          <a href="#3">
-            <h2>SITE VIEW</h2>
-            <p>사이트를 확인해보실수 있습니다.</p>
-          </a>
+        <div class="p10">
+          <!-- 7 -->
+          <h2>webstandard</h2>
+          <p class="p">웹 표준을 준수하여 제작한 사이트입니다.</p>
+        </div>
+        <div>
+          <!-- 8 -->
+        </div>
+        <div>
+          <!-- 9 -->
+        </div>
+        <div>
+          <!-- 10 -->
+        </div>
+        <div class="p10">
+          <!-- 11 -->
+          <h2>CODE VIEW</h2>
+          <p class="p">
+            무슨 무슨 기술을 사용하여 만든 소스를 깃을 통해 볼 수 있습니다.
+          </p>
+        </div>
+        <div class="black p20">
+          <!-- 12 -->
+          <p class="font_cho lh_160 fz20">
+            자바스크립트 프레임 웍 리액트 뷰, 껌이지 그냥 잘함 구경해보삼
+            자바스크립트 프레임 웍 리액트 뷰, 껌이지 그냥 잘함 구경해보삼
+            자바스크립트 프레임 웍 리액트 뷰, 껌이지 그냥 잘함 구경해보삼
+            자바스크립트 프레임 웍 리액트 뷰, 껌이지 그냥 잘함 구경해보삼
+            자바스크립트 프레임 웍 리액트 뷰, 껌이지 그냥 잘함 구경해보삼
+            자바스크립트 React는 상호작용이 많은 UI를 만들 때 생기는 어려움을
+            줄여줍니다. 애플리케이션의 각 상태에 대한 간단한 뷰만 설계하세요.
+            그럼 React는 데이터가 변경됨에 따라 적절한 컴포넌트만 효율적으로
+            갱신하고 렌더링합니다.
+          </p>
+        </div>
+        <div>
+          <!-- 13 -->
+        </div>
+        <div>
+          <!-- 14 -->
+        </div>
+        <div class="p10">
+          <!-- 15 -->
+          <h2>SITE VIEW</h2>
+          <p class="p">네티파이에 올린 파일을 직접 볼 수 있습니다.</p>
+        </div>
+        <div>
+          <!-- 16 -->
         </div>
       </div>
     </div>
+    <script>
+      const link = document.querySelector("#webstan .link");
+      const Box = document.querySelectorAll("#webstan div");
 
+      window.onload = function () {
+        function pageon() {
+          setTimeout(() => {
+            document.getElementById("webstan").classList.remove("pagemove");
+            //callback();
+          }, 100);
+        }
+        pageon();
+        function Pagechange() {
+          document.querySelectorAll(".link").forEach((el) => {
+            el.addEventListener("click", (e) => {
+              e.preventDefault();
+              const Href = el.getAttribute("href");
+              document.getElementById("webstan").classList.add("close");
+              Box.forEach((e, i) => {
+                setTimeout(() => {
+                  e.classList.add("active");
+                }, 50 * i);
+              });
+              setTimeout(() => {
+                window.location.href = Href;
+              }, 3300);
+            });
+          });
+        }
+        Pagechange();
+      };
+    </script>
   </body>
 </html>
