--- a/react/index.html
+++ b/react/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/fonts.css" />
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/reset.css" />
+    <link rel="stylesheet" href="css/prism.css" />
     <title>리액트사이트</title>
   </head>
   <body>
@@ -61,7 +62,12 @@
             자바스크립트 프레임 웍 리액트 뷰, 껌이지 그냥 잘함 구경해보삼
             자바스크립트 프레임 웍 리액트 뷰, 껌이지 그냥 잘함 구경해보삼
             자바스크립트 프레임 웍 리액트 뷰, 껌이지 그냥 잘함 구경해보삼
-            자바스크립트 프레임 웍 리액트 뷰, 껌이지 그냥 잘함 구경해보삼<br /><br />
+            자바스크립트 프레임 웍 리액트 뷰, 껌이지 그냥 잘함 구경해보삼
+          </p>
+          <pre class="line-numbers code"><code class="language-js">
+              1234 테스트 5678 test
+          </code></pre>
+          <p class="font_cho lh_160 fz20">
             자바스크립트 React는 상호작용이 많은 UI를 만들 때 생기는 어려움을
             줄여줍니다. 애플리케이션의 각 상태에 대한 간단한 뷰만 설계하세요.
             그럼 React는 데이터가 변경됨에 따라 적절한 컴포넌트만 효율적으로
@@ -74,7 +80,52 @@
             수 있습니다. 컴포넌트는 this.props를 이용해 입력 데이터를 다루는 것
             외에도 내부적인 상태 데이터를 가질 수 있습니다. 이는 this.state로
             접근할 수 있습니다. 컴포넌트의 상태 데이터가 바뀌면 render()가 다시
-            호출되어 마크업이 갱신됩니다.
+            호출되어 마크업이 갱신됩니다. 자바스크립트 React는 상호작용이 많은
+            UI를 만들 때 생기는 어려움을 줄여줍니다. 애플리케이션의 각 상태에
+            대한 간단한 뷰만 설계하세요. 그럼 React는 데이터가 변경됨에 따라
+            적절한 컴포넌트만 효율적으로 갱신하고 렌더링합니다. 기술 스택의
+            나머지 부분에는 관여하지 않기 때문에, 기존 코드를 다시 작성하지
+            않고도 React의 새로운 기능을 이용해 개발할 수 있습니다. React
+            컴포넌트는 render()라는 메서드를 구현하는데, 이것은 데이터를
+            입력받아 화면에 표시할 내용을 반환하는 역할을 합니다. 이 예제에서는
+            XML과 유사한 문법인 JSX를 사용합니다. 컴포넌트로 전달된 데이터는
+            render() 안에서 this.props를 통해 접근할 수 있습니다. 컴포넌트는
+            this.props를 이용해 입력 데이터를 다루는 것 외에도 내부적인 상태
+            데이터를 가질 수 있습니다. 이는 this.state로 접근할 수 있습니다.
+            컴포넌트의 상태 데이터가 바뀌면 render()가 다시 호출되어 마크업이
+            갱신됩니다.자바스크립트 React는 상호작용이 많은 UI를 만들 때 생기는
+            어려움을 줄여줍니다. 애플리케이션의 각 상태에 대한 간단한 뷰만
+            설계하세요. 그럼 React는 데이터가 변경됨에 따라 적절한 컴포넌트만
+            효율적으로 갱신하고 렌더링합니다. 기술 스택의 나머지 부분에는
+            관여하지 않기 때문에, 기존 코드를 다시 작성하지 않고도 React의
+            새로운 기능을 이용해 개발할 수 있습니다. React 컴포넌트는
+            render()라는 메서드를 구현하는데, 이것은 데이터를 입력받아 화면에
+            표시할 내용을 반환하는 역할을 합니다. 이 예제에서는 XML과 유사한
+            문법인 JSX를 사용합니다. 컴포넌트로 전달된 데이터는 render() 안에서
+            this.props를 통해 접근할 수 있습니다. 컴포넌트는 this.props를 이용해
+            입력 데이터를 다루는 것 외에도 내부적인 상태 데이터를 가질 수
+            있습니다. 이는 this.state로 접근할 수 있습니다. 컴포넌트의 상태
+            데이터가 바뀌면 render()가 다시 호출되어 마크업이 갱신됩니다.
+            컴포넌트는 render()라는 메서드를 구현하는데, 이것은 데이터를
+            입력받아 화면에 표시할 내용을 반환하는 역할을 합니다. 이 예제에서는
+            XML과 유사한 문법인 JSX를 사용합니다. 컴포넌트로 전달된 데이터는
+            render() 안에서 this.props를 통해 접근할 수 있습니다. 컴포넌트는
+            this.props를 이용해 입력 데이터를 다루는 것 외에도 내부적인 상태
+            데이터를 가질 수 있습니다. 이는 this.state로 접근할 수 있습니다.
+            컴포넌트의 상태 데이터가 바뀌면 render()가 다시 호출되어 마크업이
+            갱신됩니다.자바스크립트 React는 상호작용이 많은 UI를 만들 때 생기는
+            어려움을 줄여줍니다. 애플리케이션의 각 상태에 대한 간단한 뷰만
+            설계하세요. 그럼 React는 데이터가 변경됨에 따라 적절한 컴포넌트만
+            효율적으로 갱신하고 렌더링합니다. 기술 스택의 나머지 부분에는
+            관여하지 않기 때문에, 기존 코드를 다시 작성하지 않고도 React의
+            새로운 기능을 이용해 개발할 수 있습니다. React 컴포넌트는
+            render()라는 메서드를 구현하는데, 이것은 데이터를 입력받아 화면에
+            표시할 내용을 반환하는 역할을 합니다. 이 예제에서는 XML과 유사한
+            문법인 JSX를 사용합니다. 컴포넌트로 전달된 데이터는 render() 안에서
+            this.props를 통해 접근할 수 있습니다. 컴포넌트는 this.props를 이용해
+            입력 데이터를 다루는 것 외에도 내부적인 상태 데이터를 가질 수
+            있습니다. 이는 this.state로 접근할 수 있습니다. 컴포넌트의 상태
+            데이터가 바뀌면 render()가 다시 호출되어 마크업이 갱신됩니다.
           </p>
         </div>
         <div>
@@ -107,6 +158,7 @@
       </section>
     </div>
 
+    <script src="js/prism.js"></script>
     <script>
       const link = document.querySelector("#react .link");
       const Box = document.querySelectorAll("#react div");
@@ -119,25 +171,37 @@
           }, 100);
         }
         pageon();
-        function Pagechange() {
-          document.querySelectorAll(".link").forEach((el) => {
-            el.addEventListener("click", (e) => {
-              e.preventDefault();
-              const Href = el.getAttribute("href");
-              document.getElementById("react").classList.add("close");
-              Box.forEach((e, i) => {
-                setTimeout(() => {
-                  e.classList.add("active");
-                }, 50 * i);
-              });
-              setTimeout(() => {
-                window.location.href = Href;
-              }, 3300);
-            });
+
+        setTimeout(() => {
+          document.querySelectorAll(".code").forEach((ele) => {
+            ele.classList.add("start");
+            document.querySelector(".black").classList.add("scroll");
           });
-        }
-        Pagechange();
+        }, 2700);
+
+        setTimeout(() => {
+          document.querySelector(".black").classList.add("scroll");
+        }, 3000);
       };
+
+      function Pagechange() {
+        document.querySelectorAll(".link").forEach((el) => {
+          el.addEventListener("click", (e) => {
+            e.preventDefault();
+            const Href = el.getAttribute("href");
+            document.getElementById("react").classList.add("close");
+            Box.forEach((e, i) => {
+              setTimeout(() => {
+                e.classList.add("active");
+              }, 50 * i);
+            });
+            setTimeout(() => {
+              window.location.href = Href;
+            }, 3300);
+          });
+        });
+      }
+      Pagechange();
     </script>
   </body>
 </html>
