--- a/react/index.html
+++ b/react/index.html
@@ -16,8 +16,18 @@
         <div class="p10 h1 lh_75">
           <!-- 1 -->
           <div class="pagenum">
-            <a href="#3" class="now">1</a>
-            <a href="../vue/index.html" class="link">2</a>
+            <a href="#3"
+              ><img src="img/link1_w.svg" alt="1" class="w1" /><img
+                src="img/link1_b.svg"
+                alt="1"
+                class="b1"
+            /></a>
+            <a href="../vue/index.html" class="link"
+              ><img src="img/link2_w.svg" alt="2" class="w2" /><img
+                src="img/link2_b.svg"
+                alt="2"
+                class="b2"
+            /></a>
           </div>
           <h1>react.js</h1>
         </div>
@@ -55,77 +65,19 @@
         <div>
           <!-- 8 -->
         </div>
-        <div class="black p20">
+        <!-- <pre class="line-numbers code"><code class="language-js">
+          1234 테스트 5678 test
+      </code></pre> --> <!--복사용-->
+        <div class="black p20 descbox">
           <!-- 9 -->
           <p class="font_cho lh_160 fz20">
-            자바스크립트 프레임 웍 리액트 뷰, 껌이지 그냥 잘함 구경해보삼
-            자바스크립트 프레임 웍 리액트 뷰, 껌이지 그냥 잘함 구경해보삼
-            자바스크립트 프레임 웍 리액트 뷰, 껌이지 그냥 잘함 구경해보삼
-            자바스크립트 프레임 웍 리액트 뷰, 껌이지 그냥 잘함 구경해보삼
-            자바스크립트 프레임 웍 리액트 뷰, 껌이지 그냥 잘함 구경해보삼
+            리액트로 만든 맛난 사이트입니다 리액트로 만든 맛난 사이트입니다리액트로 만든 맛난 사이트입니다
+            리액트로 만든 맛난 사이트입니다리액트로 만든 맛난 사이트입니다리액트로 만든 맛난 사이트입니다리액트로 만든 맛난 사이트입니다
+            리액트로 만든 맛난 사이트입니다리액트로 만든 맛난 사이트입니다리액트로 만든 맛난 사이트입니다리액트로 만든 맛난 사이트입니다
           </p>
-          <pre class="line-numbers code"><code class="language-js">
-              1234 테스트 5678 test
-          </code></pre>
-          <p class="font_cho lh_160 fz20">
-            자바스크립트 React는 상호작용이 많은 UI를 만들 때 생기는 어려움을
-            줄여줍니다. 애플리케이션의 각 상태에 대한 간단한 뷰만 설계하세요.
-            그럼 React는 데이터가 변경됨에 따라 적절한 컴포넌트만 효율적으로
-            갱신하고 렌더링합니다. 기술 스택의 나머지 부분에는 관여하지 않기
-            때문에, 기존 코드를 다시 작성하지 않고도 React의 새로운 기능을
-            이용해 개발할 수 있습니다. React 컴포넌트는 render()라는 메서드를
-            구현하는데, 이것은 데이터를 입력받아 화면에 표시할 내용을 반환하는
-            역할을 합니다. 이 예제에서는 XML과 유사한 문법인 JSX를 사용합니다.
-            컴포넌트로 전달된 데이터는 render() 안에서 this.props를 통해 접근할
-            수 있습니다. 컴포넌트는 this.props를 이용해 입력 데이터를 다루는 것
-            외에도 내부적인 상태 데이터를 가질 수 있습니다. 이는 this.state로
-            접근할 수 있습니다. 컴포넌트의 상태 데이터가 바뀌면 render()가 다시
-            호출되어 마크업이 갱신됩니다. 자바스크립트 React는 상호작용이 많은
-            UI를 만들 때 생기는 어려움을 줄여줍니다. 애플리케이션의 각 상태에
-            대한 간단한 뷰만 설계하세요. 그럼 React는 데이터가 변경됨에 따라
-            적절한 컴포넌트만 효율적으로 갱신하고 렌더링합니다. 기술 스택의
-            나머지 부분에는 관여하지 않기 때문에, 기존 코드를 다시 작성하지
-            않고도 React의 새로운 기능을 이용해 개발할 수 있습니다. React
-            컴포넌트는 render()라는 메서드를 구현하는데, 이것은 데이터를
-            입력받아 화면에 표시할 내용을 반환하는 역할을 합니다. 이 예제에서는
-            XML과 유사한 문법인 JSX를 사용합니다. 컴포넌트로 전달된 데이터는
-            render() 안에서 this.props를 통해 접근할 수 있습니다. 컴포넌트는
-            this.props를 이용해 입력 데이터를 다루는 것 외에도 내부적인 상태
-            데이터를 가질 수 있습니다. 이는 this.state로 접근할 수 있습니다.
-            컴포넌트의 상태 데이터가 바뀌면 render()가 다시 호출되어 마크업이
-            갱신됩니다.자바스크립트 React는 상호작용이 많은 UI를 만들 때 생기는
-            어려움을 줄여줍니다. 애플리케이션의 각 상태에 대한 간단한 뷰만
-            설계하세요. 그럼 React는 데이터가 변경됨에 따라 적절한 컴포넌트만
-            효율적으로 갱신하고 렌더링합니다. 기술 스택의 나머지 부분에는
-            관여하지 않기 때문에, 기존 코드를 다시 작성하지 않고도 React의
-            새로운 기능을 이용해 개발할 수 있습니다. React 컴포넌트는
-            render()라는 메서드를 구현하는데, 이것은 데이터를 입력받아 화면에
-            표시할 내용을 반환하는 역할을 합니다. 이 예제에서는 XML과 유사한
-            문법인 JSX를 사용합니다. 컴포넌트로 전달된 데이터는 render() 안에서
-            this.props를 통해 접근할 수 있습니다. 컴포넌트는 this.props를 이용해
-            입력 데이터를 다루는 것 외에도 내부적인 상태 데이터를 가질 수
-            있습니다. 이는 this.state로 접근할 수 있습니다. 컴포넌트의 상태
-            데이터가 바뀌면 render()가 다시 호출되어 마크업이 갱신됩니다.
-            컴포넌트는 render()라는 메서드를 구현하는데, 이것은 데이터를
-            입력받아 화면에 표시할 내용을 반환하는 역할을 합니다. 이 예제에서는
-            XML과 유사한 문법인 JSX를 사용합니다. 컴포넌트로 전달된 데이터는
-            render() 안에서 this.props를 통해 접근할 수 있습니다. 컴포넌트는
-            this.props를 이용해 입력 데이터를 다루는 것 외에도 내부적인 상태
-            데이터를 가질 수 있습니다. 이는 this.state로 접근할 수 있습니다.
-            컴포넌트의 상태 데이터가 바뀌면 render()가 다시 호출되어 마크업이
-            갱신됩니다.자바스크립트 React는 상호작용이 많은 UI를 만들 때 생기는
-            어려움을 줄여줍니다. 애플리케이션의 각 상태에 대한 간단한 뷰만
-            설계하세요. 그럼 React는 데이터가 변경됨에 따라 적절한 컴포넌트만
-            효율적으로 갱신하고 렌더링합니다. 기술 스택의 나머지 부분에는
-            관여하지 않기 때문에, 기존 코드를 다시 작성하지 않고도 React의
-            새로운 기능을 이용해 개발할 수 있습니다. React 컴포넌트는
-            render()라는 메서드를 구현하는데, 이것은 데이터를 입력받아 화면에
-            표시할 내용을 반환하는 역할을 합니다. 이 예제에서는 XML과 유사한
-            문법인 JSX를 사용합니다. 컴포넌트로 전달된 데이터는 render() 안에서
-            this.props를 통해 접근할 수 있습니다. 컴포넌트는 this.props를 이용해
-            입력 데이터를 다루는 것 외에도 내부적인 상태 데이터를 가질 수
-            있습니다. 이는 this.state로 접근할 수 있습니다. 컴포넌트의 상태
-            데이터가 바뀌면 render()가 다시 호출되어 마크업이 갱신됩니다.
+          <div class="desc_image"><img src="img/reactmain.jpg" alt="1"></div>
+         
+         
           </p>
         </div>
         <div>
@@ -145,15 +97,19 @@
         </div>
         <div class="p10">
           <!-- 15 -->
-          <h2>CODE VIEW</h2>
-          <p class="p">
-            무슨 무슨 기술을 사용하여 만든 소스를 깃을 통해 볼 수 있습니다.
-          </p>
+          <a href="#" class="point">
+            <h2>CODE VIEW</h2>
+            <p class="p">
+              무슨 무슨 기술을 사용하여 만든 소스를 깃을 통해 볼 수 있습니다.
+            </p>
+          </a>
         </div>
         <div class="p10">
           <!-- 16 -->
-          <h2>SITE VIEW</h2>
-          <p class="p">네티파이에 올린 파일을 직접 볼 수 있습니다.</p>
+          <a href="#" class="point">
+            <h2>SITE VIEW</h2>
+            <p class="p">네티파이에 올린 파일을 직접 볼 수 있습니다.</p>
+          </a>
         </div>
       </section>
     </div>
@@ -173,17 +129,13 @@
         pageon();
 
         setTimeout(() => {
-          document.querySelectorAll(".code").forEach((ele) => {
-            ele.classList.add("start");
+          // document.querySelectorAll(".code").forEach((ele) => {
+          //   ele.classList.add("start");
             document.querySelector(".black").classList.add("scroll");
-          });
-        }, 2700);
-
-        setTimeout(() => {
-          document.querySelector(".black").classList.add("scroll");
-        }, 3000);
+            document.getElementById("react").classList.add("btnon");
+          // });
+        }, 1600);
       };
-
       function Pagechange() {
         document.querySelectorAll(".link").forEach((el) => {
           el.addEventListener("click", (e) => {
@@ -197,7 +149,7 @@
             });
             setTimeout(() => {
               window.location.href = Href;
-            }, 3300);
+            }, 2000);
           });
         });
       }
