--- a/vue/index.html
+++ b/vue/index.html
@@ -15,8 +15,18 @@
         <div class="p10 h1 lh_75">
           <!-- 1 -->
           <div class="pagenum">
-            <a href="../react/index.html" class="link">1</a>
-            <a href="#3" class="link now">2</a>
+            <a href="../react/index.html" class="link"
+              ><img src="img/link1_w.svg" alt="1" class="w1" /><img
+                src="img/link1_b.svg"
+                alt="1"
+                class="b1"
+            /></a>
+            <a href="#3"
+              ><img src="img/link2_w.svg" alt="2" class="w2" /><img
+                src="img/link2_b.svg"
+                alt="2"
+                class="b2"
+            /></a>
           </div>
           <h1>vue.js</h1>
         </div>
@@ -119,6 +129,9 @@
           }, 100);
         }
         pageon();
+        setTimeout(() => {
+          document.getElementById("vue").classList.add("btnon");
+        }, 1600);
         function Pagechange() {
           document.querySelectorAll(".link").forEach((el) => {
             el.addEventListener("click", (e) => {
@@ -132,7 +145,7 @@
               });
               setTimeout(() => {
                 window.location.href = Href;
-              }, 3300);
+              }, 2000);
             });
           });
         }
