--- a/react/index.html
+++ b/react/index.html
@@ -68,18 +68,27 @@
         <!-- <pre class="line-numbers code"><code class="language-js">
           1234 테스트 5678 test
       </code></pre> --> <!--복사용-->
-        <div class="black p20 descbox">
-          <!-- 9 -->
-          <p class="font_cho lh_160 fz20">
-            리액트로 만든 맛난 사이트입니다 리액트로 만든 맛난 사이트입니다리액트로 만든 맛난 사이트입니다
-            리액트로 만든 맛난 사이트입니다리액트로 만든 맛난 사이트입니다리액트로 만든 맛난 사이트입니다리액트로 만든 맛난 사이트입니다
-            리액트로 만든 맛난 사이트입니다리액트로 만든 맛난 사이트입니다리액트로 만든 맛난 사이트입니다리액트로 만든 맛난 사이트입니다
+      <div class="black p20 descbox">
+        <!-- 9 -->          
+        <h3 class="mt10 mb30">Description of React site</h3>
+        <div class="desc_image"><img src="img/reactmain.jpg" alt="1"></div>
+        <p class="font_cho lh_160 fz20 prl mt10 mb20"> 
+        설명 들어갈 부분입니다 설명 들어갈 부분입니다      설명 들어갈 부분입니다      설명 들어갈 부분입니다      설명 들어갈 부분입니다      설명 들어갈 부분입니다      설명 들어갈 부분입니다      설명 들어갈 부분입니다      설명 들어갈 부분입니다            
+        </p>
+        <div class="desc_image2"><img src="img/reactabout.jpg" alt="1"></div>
+        <p class="font_cho lh_160 fz20 prl mt10 mb20"> 
+          설명 들어갈 부분입니다 설명 들어갈 부분입니다      설명 들어갈 부분입니다      설명 들어갈 부분입니다      설명 들어갈 부분입니다      설명 들어갈 부분입니다      설명 들어갈 부분입니다      설명 들어갈 부분입니다      설명 들어갈 부분입니다            
           </p>
-          <div class="desc_image"><img src="img/reactmain.jpg" alt="1"></div>
-         
-         
+        <div class="desc_image3"><img src="img/reactyoutube.jpg" alt="1"></div>
+        <p class="font_cho lh_160 fz20 prl mt10 mb20"> 
+          설명 들어갈 부분입니다 설명 들어갈 부분입니다      설명 들어갈 부분입니다      설명 들어갈 부분입니다      설명 들어갈 부분입니다      설명 들어갈 부분입니다      설명 들어갈 부분입니다      설명 들어갈 부분입니다      설명 들어갈 부분입니다            
           </p>
-        </div>
+        <div class="desc_image4"><img src="img/reactmovie.jpg" alt="1"></div>
+        <p class="font_cho lh_160 fz20 prl mt10 mb20"> 
+          설명 들어갈 부분입니다 설명 들어갈 부분입니다      설명 들어갈 부분입니다      설명 들어갈 부분입니다      설명 들어갈 부분입니다      설명 들어갈 부분입니다      설명 들어갈 부분입니다      설명 들어갈 부분입니다      설명 들어갈 부분입니다            
+          </p>         
+        </p>
+      </div>
         <div>
           <!-- 10 -->
         </div>
