--- a/main/index3.html
+++ b/main/index3.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/reset.css" />
     <link rel="stylesheet" href="css/fonts.css" />
     <link rel="stylesheet" href="css/style3.css" />
-    <title>메인페이지</title>
+    <title>메인페이지입니다.</title>
   </head>
   <body>
     <div id="cont__wrap">
