--- a/react/index.html
+++ b/react/index.html
@@ -13,7 +13,7 @@
   <body>
     <div id="react_wrap">
       <section id="react" class="load pagemove">
-        <div class="p10 h1 lh_75">
+        <div class="p20 h1">
           <!-- 1 -->
           <div class="pagenum">
             <a href="#3"
@@ -48,7 +48,7 @@
             <img src="img/Arrow.svg" alt="화살표" />
           </a>
         </div>
-        <div class="p10">
+        <div class="p20">
           <!-- 5 -->
           <h2>REACT, VUE</h2>
           <p class="p">
@@ -67,28 +67,47 @@
         </div>
         <!-- <pre class="line-numbers code"><code class="language-js">
           1234 테스트 5678 test
-      </code></pre> --> <!--복사용-->
-      <div class="black p20 descbox">
-        <!-- 9 -->          
-        <h3 class="mt10 mb30">Description of React site</h3>
-        <div class="desc_image"><img src="img/reactmain.jpg" alt="1"></div>
-        <p class="font_cho lh_160 fz20 prl mt10 mb20"> 
-        설명 들어갈 부분입니다 설명 들어갈 부분입니다      설명 들어갈 부분입니다      설명 들어갈 부분입니다      설명 들어갈 부분입니다      설명 들어갈 부분입니다      설명 들어갈 부분입니다      설명 들어갈 부분입니다      설명 들어갈 부분입니다            
-        </p>
-        <div class="desc_image2"><img src="img/reactabout.jpg" alt="1"></div>
-        <p class="font_cho lh_160 fz20 prl mt10 mb20"> 
-          설명 들어갈 부분입니다 설명 들어갈 부분입니다      설명 들어갈 부분입니다      설명 들어갈 부분입니다      설명 들어갈 부분입니다      설명 들어갈 부분입니다      설명 들어갈 부분입니다      설명 들어갈 부분입니다      설명 들어갈 부분입니다            
+      </code></pre> -->
+        <!--복사용-->
+        <div class="black p20 descbox">
+          <!-- 9 -->
+          <h3 class="">Description of React site</h3>
+          <pre><code class="language-js">1234 테스트 5678 test
+        </code></pre>
+          <p class="font_cho fz20">
+            길이 테스트길이 테스트길이 테스트길이 테스트길이 테스트길이
+            테스트길이 테스트길이 테스트길이 테스트길이 테스트길이 테스트길이
+            테스트길이 테스트길이 테스트길이 테스트길이 테스트길이 테스트길이
+            테스트길이 테스트길이 테스트길이 테스트길이 테스트길이 테스트길이
+            테스트길이 테스트길이 테스트길이 테스트길이 테스트길이 테스트길이
+            테스트길이 테스트길이 테스트길이 테스트길이 테스트길이 테스트길이
+            테스트길이 테스트길이 테스트길이 테스트길이 테스트길이 테스트길이
+            테스트길이 테스트길이 테스트길이 테스트길이 테스트길이 테스트길이
+            테스트길이 테스트길이 테스트길이 테스트길이 테스트길이 테스트길이
+            테스트길이 테스트길이 테스트길이 테스트길이 테스트길이 테스트길이
+            테스트길이 테스트길이 테스트길이 테스트길이 테스트길이 테스트길이
+            테스트길이 테스트길이 테스트길이 테스트길이 테스트길이 테스트길이
+            테스트길이 테스트길이 테스트길이 테스트길이 테스트길이 테스트길이
+            테스트길이 테스트길이 테스트길이 테스트길이 테스트길이 테스트길이
+            테스트길이 테스트길이 테스트길이 테스트길이 테스트길이 테스트길이
+            테스트길이 테스트길이 테스트길이 테스트길이 테스트길이 테스트길이
+            테스트길이 테스트길이 테스트길이 테스트길이 테스트길이 테스트길이
+            테스트길이 테스트길이 테스트길이 테스트길이 테스트길이 테스트길이
+            테스트길이 테스트길이 테스트길이 테스트길이 테스트길이 테스트길이
+            테스트길이 테스트길이 테스트길이 테스트길이 테스트길이 테스트길이
+            테스트길이 테스트길이 테스트길이 테스트길이 테스트길이 테스트길이
+            테스트길이 테스트길이 테스트길이 테스트길이 테스트길이 테스트길이
+            테스트길이 테스트길이 테스트길이 테스트길이 테스트길이 테스트길이
+            테스트길이 테스트길이 테스트길이 테스트길이 테스트길이 테스트길이
+            테스트길이 테스트길이 테스트길이 테스트길이 테스트길이 테스트길이
+            테스트길이 테스트길이 테스트길이 테스트길이 테스트길이 테스트길이
+            테스트길이 테스트길이 테스트길이 테스트길이 테스트길이 테스트길이
+            테스트길이 테스트길이 테스트길이 테스트길이 테스트길이 테스트길이
+            테스트길이 테스트길이 테스트길이 테스트길이 테스트길이 테스트길이
+            테스트길이 테스트길이 테스트길이 테스트길이 테스트길이 테스트길이
+            테스트길이 테스트길이 테스트길이 테스트길이 테스트길이 테스트
           </p>
-        <div class="desc_image3"><img src="img/reactyoutube.jpg" alt="1"></div>
-        <p class="font_cho lh_160 fz20 prl mt10 mb20"> 
-          설명 들어갈 부분입니다 설명 들어갈 부분입니다      설명 들어갈 부분입니다      설명 들어갈 부분입니다      설명 들어갈 부분입니다      설명 들어갈 부분입니다      설명 들어갈 부분입니다      설명 들어갈 부분입니다      설명 들어갈 부분입니다            
-          </p>
-        <div class="desc_image4"><img src="img/reactmovie.jpg" alt="1"></div>
-        <p class="font_cho lh_160 fz20 prl mt10 mb20"> 
-          설명 들어갈 부분입니다 설명 들어갈 부분입니다      설명 들어갈 부분입니다      설명 들어갈 부분입니다      설명 들어갈 부분입니다      설명 들어갈 부분입니다      설명 들어갈 부분입니다      설명 들어갈 부분입니다      설명 들어갈 부분입니다            
-          </p>         
-        </p>
-      </div>
+        </div>
         <div>
           <!-- 10 -->
         </div>
@@ -104,7 +123,7 @@
         <div>
           <!-- 14 -->
         </div>
-        <div class="p10">
+        <div class="p20">
           <!-- 15 -->
           <a href="#" class="point">
             <h2>CODE VIEW</h2>
@@ -113,7 +132,7 @@
             </p>
           </a>
         </div>
-        <div class="p10">
+        <div class="p20">
           <!-- 16 -->
           <a href="#" class="point">
             <h2>SITE VIEW</h2>
@@ -140,8 +159,8 @@
         setTimeout(() => {
           // document.querySelectorAll(".code").forEach((ele) => {
           //   ele.classList.add("start");
-            document.querySelector(".black").classList.add("scroll");
-            document.getElementById("react").classList.add("btnon");
+          document.querySelector(".black").classList.add("scroll");
+          document.getElementById("react").classList.add("btnon");
           // });
         }, 1600);
       };
