리액트페이지수정

--- a/react/index.html
+++ b/react/index.html
@@ -71,42 +71,97 @@
         <!--복사용-->
         <div class="black p20 descbox">
           <!-- 9 -->
-          <h3 class="">Description of React site</h3>
-          <pre><code class="language-js">1234 테스트 5678 test
+          <div class="">
+            <h3 class="">Description of React site</h3>
+            <pre><code class="language-js">1234 테스트 5678 test
         </code></pre>
-          <p class="font_cho fz20">
-            길이 테스트길이 테스트길이 테스트길이 테스트길이 테스트길이
-            테스트길이 테스트길이 테스트길이 테스트길이 테스트길이 테스트길이
-            테스트길이 테스트길이 테스트길이 테스트길이 테스트길이 테스트길이
-            테스트길이 테스트길이 테스트길이 테스트길이 테스트길이 테스트길이
-            테스트길이 테스트길이 테스트길이 테스트길이 테스트길이 테스트길이
-            테스트길이 테스트길이 테스트길이 테스트길이 테스트길이 테스트길이
-            테스트길이 테스트길이 테스트길이 테스트길이 테스트길이 테스트길이
-            테스트길이 테스트길이 테스트길이 테스트길이 테스트길이 테스트길이
-            테스트길이 테스트길이 테스트길이 테스트길이 테스트길이 테스트길이
-            테스트길이 테스트길이 테스트길이 테스트길이 테스트길이 테스트길이
-            테스트길이 테스트길이 테스트길이 테스트길이 테스트길이 테스트길이
-            테스트길이 테스트길이 테스트길이 테스트길이 테스트길이 테스트길이
-            테스트길이 테스트길이 테스트길이 테스트길이 테스트길이 테스트길이
-            테스트길이 테스트길이 테스트길이 테스트길이 테스트길이 테스트길이
-            테스트길이 테스트길이 테스트길이 테스트길이 테스트길이 테스트길이
-            테스트길이 테스트길이 테스트길이 테스트길이 테스트길이 테스트길이
-            테스트길이 테스트길이 테스트길이 테스트길이 테스트길이 테스트길이
-            테스트길이 테스트길이 테스트길이 테스트길이 테스트길이 테스트길이
-            테스트길이 테스트길이 테스트길이 테스트길이 테스트길이 테스트길이
-            테스트길이 테스트길이 테스트길이 테스트길이 테스트길이 테스트길이
-            테스트길이 테스트길이 테스트길이 테스트길이 테스트길이 테스트길이
-            테스트길이 테스트길이 테스트길이 테스트길이 테스트길이 테스트길이
-            테스트길이 테스트길이 테스트길이 테스트길이 테스트길이 테스트길이
-            테스트길이 테스트길이 테스트길이 테스트길이 테스트길이 테스트길이
-            테스트길이 테스트길이 테스트길이 테스트길이 테스트길이 테스트길이
-            테스트길이 테스트길이 테스트길이 테스트길이 테스트길이 테스트길이
-            테스트길이 테스트길이 테스트길이 테스트길이 테스트길이 테스트길이
-            테스트길이 테스트길이 테스트길이 테스트길이 테스트길이 테스트길이
-            테스트길이 테스트길이 테스트길이 테스트길이 테스트길이 테스트길이
-            테스트길이 테스트길이 테스트길이 테스트길이 테스트길이 테스트길이
-            테스트길이 테스트길이 테스트길이 테스트길이 테스트길이 테스트
-          </p>
+            <p class="font_cho fz20 test3">
+              길이 테스트길이 테스트길이 테스트길이 테스트길이 테스트길이
+              테스트길이 테스트길이 테스트길이 테스트길이 테스트길이 테스트길이
+              테스트길이 테스트길이 테스트길이 테스트길이 테스트길이 테스트길이
+              테스트길이 테스트길이 테스트길이 테스트길이 테스트길이 테스트길이
+              테스트길이 테스트길이 테스트길이 테스트길이 테스트길이 테스트길이
+              테스트길이 테스트길이 테스트길이 테스트길이 테스트길이 테스트길이
+              테스트길이 테스트길이 테스트길이 테스트길이 테스트길이 테스트길이
+              테스트길이 테스트길이 테스트길이 테스트길이 테스트길이 테스트길이
+              테스트길이 테스트길이 테스트길이 테스트길이 테스트길이 테스트길이
+              테스트길이 테스트길이 테스트길이 테스트길이 테스트길이 테스트길이
+              테스트길이 테스트길이 테스트길이 테스트길이 테스트길이 테스트길이
+              테스트길이 테스트길이 테스트길이 테스트길이 테스트길이 테스트길이
+              테스트길이 테스트길이 테스트길이 테스트길이 테스트길이 테스트길이
+              테스트길이 테스트길이 테스트길이 테스트길이 테스트길이 테스트길이
+              테스트길이 테스트길이 테스트길이 테스트길이 테스트길이 테스트길이
+              테스트길이 테스트길이 테스트길이 테스트길이 테스트길이 테스트길이
+              테스트길이 테스트길이 테스트길이 테스트길이 테스트길이 테스트길이
+              테스트길이 테스트길이 테스트길이 테스트길이 테스트길이 테스트길이
+              테스트길이 테스트길이 테스트길이 테스트길이 테스트길이 테스트길이
+              테스트길이 테스트길이 테스트길이 테스트길이 테스트길이 테스트길이
+              테스트길이 테스트길이 테스트길이 테스트길이 테스트길이 테스트길이
+              테스트길이 테스트길이 테스트길이 테스트길이 테스트길이 테스트길이
+              테스트길이 테스트길이 테스트길이 테스트길이 테스트길이 테스트길이
+              테스트길이 테스트길이 테스트길이 테스트길이 테스트길이 테스트길이
+              테스트길이 테스트길이 테스트길이 테스트길이 테스트길이 테스트길이
+              테스트길이 테스트길이 테스트길이 테스트길이 테스트길이 테스트길이
+              테스트길이 테스트길이 테스트길이 테스트길이 테스트길이 테스트길이
+              테스트길이 테스트길이 테스트길이 테스트길이 테스트길이 테스트길이
+              테스트길이 테스트길이 테스트길이 테스트길이 테스트길이 테스트길이
+              테스트길이 테스트길이 테스트길이 테스트길이 테스트길이 테스트길이
+              테스트길이 테스트길이 테스트길이 테스트길이 테스트길이 테스트길이
+              테스트길이 테스트길이 테스트길이 테스트길이 테스트길이 테스트길이
+              테스트길이 테스트길이 테스트길이 테스트길이 테스트길이 테스트길이
+              테스트길이 테스트길이 테스트길이 테스트길이 테스트길이 테스트길이
+              테스트길이 테스트길이 테스트길이 테스트길이 테스트길이 테스트길이
+              테스트길이 테스트길이 테스트길이 테스트길이 테스트길이 테스트길이
+              테스트길이 테스트길이 테스트길이 테스트길이 테스트길이 테스트길이
+              테스트길이 테스트길이 테스트길이 테스트길이 테스트길이 테스트길이
+              테스트길이 테스트길이 테스트길이 테스트길이 테스트길이 테스트길이
+              테스트길이 테스트길이 테스트길이 테스트길이 테스트길이 테스트길이
+              테스트길이 테스트길이 테스트길이 테스트길이 테스트길이 테스트길이
+              테스트길이 테스트길이 테스트길이 테스트길이 테스트길이 테스트길이
+              테스트길이 테스트길이 테스트길이 테스트길이 테스트길이 테스트길이
+              테스트길이 테스트길이 테스트길이 테스트길이 테스트길이 테스트길이
+              테스트길이 테스트길이 테스트길이 테스트길이 테스트길이 테스트길이
+              테스트길이 테스트길이 테스트길이 테스트길이 테스트길이 테스트길이
+              테스트길이 테스트길이 테스트길이 테스트길이 테스트길이 테스트길이
+              테스트길이 테스트길이 테스트길이 테스트길이 테스트길이 테스트길이
+              테스트길이 테스트길이 테스트길이 테스트길이 테스트길이 테스트길이
+              테스트길이 테스트길이 테스트길이 테스트길이 테스트길이 테스트길이
+              테스트길이 테스트길이 테스트길이 테스트길이 테스트길이 테스트길이
+              테스트길이 테스트길이 테스트길이 테스트길이 테스트길이 테스트길이
+              테스트길이 테스트길이 테스트길이 테스트길이 테스트길이 테스트길이
+              테스트길이 테스트길이 테스트길이 테스트길이 테스트길이 테스트길이
+              테스트길이 테스트길이 테스트길이 테스트길이 테스트길이 테스트길이
+              테스트길이 테스트길이 테스트길이 테스트길이 테스트길이 테스트길이
+              테스트길이 테스트길이 테스트길이 테스트길이 테스트길이 테스트길이
+              테스트길이 테스트길이 테스트길이 테스트길이 테스트길이 테스트길이
+              테스트길이 테스트길이 테스트길이 테스트길이 테스트길이 테스트길이
+              테스트길이 테스트길이 테스트길이 테스트길이 테스트길이 테스트길이
+              테스트길이 테스트길이 테스트길이 테스트길이 테스트길이 테스트길이
+              테스트길이 테스트길이 테스트길이 테스트길이 테스트길이 테스트길이
+              테스트길이 테스트길이 테스트길이 테스트길이 테스트길이 테스트길이
+              테스트길이 테스트길이 테스트길이 테스트길이 테스트길이 테스트길이
+              테스트길이 테스트길이 테스트길이 테스트길이 테스트길이 테스트길이
+              테스트길이 테스트길이 테스트길이 테스트길이 테스트길이 테스트길이
+              테스트길이 테스트길이 테스트길이 테스트길이 테스트길이 테스트길이
+              테스트길이 테스트길이 테스트길이 테스트길이 테스트길이 테스트길이
+              테스트길이 테스트길이 테스트길이 테스트길이 테스트길이 테스트길이
+              테스트길이 테스트길이 테스트길이 테스트길이 테스트길이 테스트길이
+              테스트길이 테스트길이 테스트길이 테스트길이 테스트길이 테스트길이
+              테스트길이 테스트길이 테스트길이 테스트길이 테스트길이 테스트길이
+              테스트길이 테스트길이 테스트길이 테스트길이 테스트길이 테스트길이
+              테스트길이 테스트길이 테스트길이 테스트길이 테스트길이 테스트길이
+              테스트길이 테스트길이 테스트길이 테스트길이 테스트길이 테스트길이
+              테스트길이 테스트길이 테스트길이 테스트길이 테스트길이 테스트길이
+              테스트길이 테스트길이 테스트길이 테스트길이 테스트길이 테스트길이
+              테스트길이 테스트길이 테스트길이 테스트길이 테스트길이 테스트길이
+              테스트길이 테스트길이 테스트길이 테스트길이 테스트길이 테스트길이
+              테스트길이 테스트길이 테스트길이 테스트길이 테스트길이 테스트길이
+              테스트길이 테스트길이 테스트길이 테스트길이 테스트길이 테스트길이
+              테스트길이 테스트길이 테스트길이 테스트길이 테스트길이 테스트길이
+              테스트길이 테스트길이 테스트길이 테스트길이 테스트길이 테스트길이
+              테스트길이 테스트길이 테스트
+            </p>
+          </div>
         </div>
         <div>
           <!-- 10 -->
@@ -125,7 +180,7 @@
         </div>
         <div class="p20">
           <!-- 15 -->
-          <a href="#" class="point">
+          <a href="#" class="point test2">
             <h2>CODE VIEW</h2>
             <p class="p">
               무슨 무슨 기술을 사용하여 만든 소스를 깃을 통해 볼 수 있습니다.
@@ -170,6 +225,9 @@
             e.preventDefault();
             const Href = el.getAttribute("href");
             document.getElementById("react").classList.add("close");
+            setTimeout(() => {
+              document.querySelector(".test3").classList.add("test4");
+            }, 10);
             Box.forEach((e, i) => {
               setTimeout(() => {
                 e.classList.add("active");
@@ -182,6 +240,13 @@
         });
       }
       Pagechange();
+
+      function func() {
+        document.querySelector(".test2").addEventListener("click", () => {
+          document.querySelector(".test3").classList.add("test4");
+        });
+      }
+      func();
     </script>
   </body>
 </html>
